# peak-spreading

./: .gitattributes  .gitignore  LICENSE  Manifest.toml  Project.toml  README.md  environment.yml  pyproject.toml
code/: KFactorPeaks.jl  KFactors.jl  calculate_peaks.jl  geo.jl  test.jl
data/: all_district_peaks.parquet  flow_occ_distr.csv  free_flow_speeds.csv  fundamental_diagram.ra  peaks_merged.parquet  sensor_meta_geo.csv
maps/: arrows.qgz  sensor_overview.qgz
notebooks/: Capacity.ipynb  Conceptual plots.ipynb  EDA.ipynb  Entirely missing stations.ipynb  Flow peakiness exploration.ipynb  Free flow speed plot.ipynb  Fundamental diagrams.ipynb  Heterogeneity model.ipynb  Heterogeneity plot.ipynb  Individual sensor permutation tests.ipynb  Missing data patterns.ipynb  Missing data robustness model.ipynb  Network structure.ipynb  Peak spreading analysis.ipynb  Permutation test animation.ipynb  Sensor data autocorrelation.ipynb  Sensor descriptive statistics.ipynb  Sensor shifts.ipynb  Spreading over time.ipynb  Time of day distribution.ipynb  Total flow plot.ipynb  Urban rural sensors.ipynb
presentation/: unc-twg-2021-12-03.html  unc-twg-2021-12-03.md  unc.css
scrape_data/: scrape_data.py
scripts/: calculate_peaks.jl  combine_peaks.jl  extract_flow_occ_distributions.jl  free_flow_speed_by_sensor.jl  fundamental_diagrams.jl  geo_data.jl
slurm/: checksum.sbatch  compute_peaks.sbatch
src/: KFactorPeaks.jl  KFactors.jl  computation.jl  fundamental_diagrams.jl  holidays.jl  periods.jl  vdf.jl
test/: Manifest.toml  Project.toml  array_indices.jl  runtests.jl  (+6 more)
(+6 files in other folders)
