[tool.poetry]
name = "peakspreading"
version = "0.1.0"
description = ""
authors = ["Matt Bhagat-Conway <matt@indicatrix.org>"]
readme = "README.md"
packages = [{include = "scrape_data"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
jupyter = "^1.0.0"
jupyterlab = "^3.6.3"
nbdime = "^3.1.1"
nbconvert = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
